Print Stoplight API response when publishing fails

--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -25,4 +25,6 @@ steps:
           --url "https://next-api.stoplight.io/docs.release?domain=<<parameters.domain>>" \
           --header "Authorization: Bearer <<parameters.api_token>>" \
           > /tmp/stoplight/response.json 2>/dev/null
+        cat /tmp/stoplight/response.json
         [[ $(cat /tmp/stoplight/response.json | jq '.ok') = 'true' ]]
+
