--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -25,4 +25,4 @@ steps:
           --url "https://next-api.stoplight.io/docs.release?domain=<<parameters.domain>>" \
           --header "Authorization: Bearer <<parameters.api_token>>" \
           > /tmp/stoplight/response.json 2>/dev/null
-        [[ $(cat /tmp/stoplight/response.json | jq '.ok') = 'true' ]]
+        [[ $(cat /tmp/stoplight/response.json | jq '.ok') = 'true' ]] || cat /tmp/stoplight/response.json
