Fix publish step not installing cURL

--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -15,8 +15,8 @@ parameters:
 
 steps:
   - run:
-      name: Install jq
-      command: apt-get update && apt-get install -y jq
+      name: Install cURL and jq
+      command: apt-get update && apt-get install -y curl jq
   - run:
       name: Publish Stoplight documentation
       command: |
@@ -27,4 +27,3 @@ steps:
           > /tmp/stoplight/response.json 2>/dev/null
         cat /tmp/stoplight/response.json
         [[ $(cat /tmp/stoplight/response.json | jq '.ok') = 'true' ]]
-
